# microservices-design-patterns

./: .codecov.yml  .gitignore  .travis.yml  CNAME  README.md  asset-manifest.json  composer.json  index.html  manifest.json  pom.xml
admin-server/: pom.xml
android-webapp/: .gitignore  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
authentication-common/: pom.xml
authentication-service/: README.md  pom.xml  skaffold.yaml
clojure-service/: .gitignore  README.md  project.clj
config-server/: pom.xml
docker/: create-datasource-and-dashboard.sh  docker-compose-cloud.yml  docker-compose-prod.yml  docker-compose-raspberrypi.yml  docker-compose.yml  docker-entrypoint.sh  grafana-datasource.yaml  kafka-config.yaml  loki-config.yaml  otelcol-config.yaml  prometheus-prod.yml  prometheus.yml  promtail-config.yaml  service-discovery-load-configuration.sh  sonar.yml
docs/: jmeter.jmx  postman_collection.json
dotnet-service/: .env.docker  .gitignore  Dockerfile  DotnetService.csproj  Program.cs  dotnet-service.sln
edge-server/: HOW_TO_CAPTURE_SESSION_ID.md  pom.xml
eureka-server/: pom.xml
gcloud/: buid-images.sh  check-diff-files.sh  deploy-prod.sh  install-google-cloud-sdk.sh
go-service/: .env  .env.docker  .env.production  .gitignore  Dockerfile  go.mod  go.sum  main.go
java8-learning/: pom.xml
jwt-common/: pom.xml
kotlin-service/: pom.xml
kubernetes/: deployment-admin-server.yml  (+27 more)
rust-service/: .env.docker  Cargo.toml  Dockerfile
rust-service/src/: config.rs  consul.rs  database.rs  handlers.rs  main.rs  middleware.rs  models.rs
(+1435 files in other folders)
