[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
jsonwebtoken = "10.2.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
consulrs = "0.1.0"
actix-web-prometheus = "0.1"
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
yaml-rust = { version = "0.11", package = "yaml-rust2" }
jwks = "0.5.2"